--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "devDependencies": {
     "concurrently": "^9.1.2",
     "nodemon": "^3.1.9"
+  },
+  "dependencies": {
+    "axios": "^1.9.0",
+    "jsonwebtoken": "^9.0.2"
   }
 }
