--- a/authService/package.json
+++ b/authService/package.json
@@ -13,12 +13,17 @@
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cls-hooked": "^4.2.2",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
     "fs": "*",
     "jsonwebtoken": "^9.0.2",
     "jwk-to-pem": "^2.0.7",
-    "mongoose": "^8.9.2"
+    "mongoose": "^8.9.2",
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0",
+    "winston-elasticsearch": "^0.19.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
