--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
-    "jsonwebtoken": "^9.0.2"
+    "cls-hooked": "^4.2.2",
+    "express-rate-limit": "^7.5.0",
+    "jsonwebtoken": "^9.0.2",
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0",
+    "winston-elasticsearch": "^0.19.0"
   }
 }
